--- a/express/101/public/upload.html
+++ b/express/101/public/upload.html
@@ -7,11 +7,10 @@
       <h3>File Upload:</h3>
       Select a file to upload: <br />
       
-      <form action = "/file_upload" method = "POST" 
-         enctype = "multipart/form-data">
-         <input type="file" name="file" size="50" />
+      <form action="/file_upload" method="POST" enctype="multipart/form-data">
+         <input type="file" name="file" />
          <br />
-         <input type = "submit" value = "Upload File" />
+         <input type="submit" value="Upload File" />
       </form>
       
    </body>
